--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 	
 <body>
 	
+	<div class="container" ng-controller="MainCtrl">
 	
+	<h1>Users</h1>
+	
+	</div>
 	
 </body>	
 	<script src="js/app.js"></script>
