--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 	
 	<div class="container" ng-controller="MainCtrl">
 	
-	<h1>Users</h1>
+		<h1>Users</h1>
+
+		<label>Enter name</label>
+		<input type="text" class="form-control">
+		<label>Enter surname</label>
+		<input type="text" class="form-control">
+		</br>
+	<div class="btn btn-block btn-primary">Add User</div>
+
 	
 	</div>
 	
