insert  inside index.html and insert i inside function removeUser(app.js)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					{{myUser.surename}}
 				</td>
 				<td>
-					<div ng-click="removeUser(user)" class="btn btn-xs btn-danger">Remove</div>
+					<div ng-click="removeUser($index, user)" class="btn btn-xs btn-danger">Remove</div>
 				</td>
 			</tr>
 		</tbody>
